Add (almost empty) files for ListBox implementation.

--- a/gameplay/CMakeLists.txt
+++ b/gameplay/CMakeLists.txt
@@ -97,6 +97,8 @@ set(GAMEPLAY_SRC
     src/Layout.h
     src/Light.cpp
     src/Light.h
+    src/ListBox.h
+    src/ListBox.cpp
     src/Logger.cpp
     src/Logger.h
     src/Material.cpp
